[package]
name = "watchmymcserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
duct = "0.13.7"
anyhow = "1.0.79"
colored = "2.1.0"
ctrlc = "3.4.2"
